  Create a chat room.
- chat modify "title" <max users> <public flag> <password>
  Modify a chat room.
- chat bestow <user #>
  Give chat admin power to the user.
- chat join <chat #>
  Join the chat room.
- chat kick <user #>
  Join the chat room.
- chat leave
  Leave the chat room.
- chat info
  Info about the chat room.
- chat list
  List of chat rooms around you.

New config options:
- partySkill: target_dead
  Only use the skill on a dead player. Useful for Resurrection.
- avoidGM_namePattern (regular expression)
  In case your server uses non-standard GM names, you can specify a
  regular expression for GM names with this option.
- teleportAuto_totalDmg (number)
  teleportAuto_totalDmgInLock (number)
  Teleport away if a monster has done this much total damage to you.
- dcOnZeny (number)
  Disconnect automatically when your Zeny equals or lower than the
  specified number. Useful if you use buyAuto or the auto buy plugin.
- teleportAuto_atkCount (number)
  Teleport away if Kore can't kill the monster in the specified number
  of attacks.
- "e" sequence for NPC talk steps; use it when you want kore to wait
  until the NPC says "Done talking"
- route_teleport_notInMaps (list of maps)
  Do not teleport on route in the specified maps.
- serverType 4
  Set this for new Freya servers such as EuphRO and VanRO.

New control files:
- control/sys.txt
  This file stores options that can only be loaded once (so this file
  cannot be reloaded). You can get a default version of this file
  from the default configuration files archive.

Internal:
- whenGroundStatus() now takes coordinates instead of a player/monster.
- There's now a %sys (in package Settings) variable for options in
  control/sys.txt
- Most modules are now autoloadable (see perldoc SelfLoader).
- Optimizations in the %portals_lut data structure. This saves about
  700 KB of memory.
- New "b<item#>,<quantity>" NPC talk sequence, only useful to macro writers